Work for #4066: fix alignment of paneldynamic next icon

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -130,6 +130,7 @@
 }
 .sd-paneldynamic__next-btn {
     margin-left: calcSize(2);
+    margin-right: calcSize(-1);
     transform: rotate(180deg);
 }
 .sd-paneldynamic__placeholder {
